[package]
name = "surreal"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "macro", "derive"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
derive = { version = "0.1.0", path = "derive" }
dotenvy = "0.15.6"
macro = { version = "0.1.0", path = "macro" }
nameof = "1.2.2"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
